feat(alarm): refactor alarm system and update routing strategies